Fix (pdfwrite) : Check pointer before dereferencing

Details
Bug #690704 "Regression: seg fault with pdfwrite"

The pdfwrite mask image handling assumed that if certain conditions were met then an
image related to text, and attempted to use a stored text enumerator. It did not,
however, check the stored pointer before dereferencing it.

Added a check to see the pointer is non-NULL before deciding that the image refers to
text.

Expected Differences
A number of PCL/PXL test files should no longer crash.

pxlfts/t306.bin
pxlfts/t307.bin
pxlfts/t421.bin
pxlfts/t422.bin

pxlfts2.0/t305.bin
pxlfts2.0/t306.bin
pxlfts2.0/t307.bin
pxlfts2.0/t419.bin
pxlfts2.0/t420.bin
pxlfts2.0/t421.bin
pxlfts2.0/t422.bin

pxlfts3.0/A001.BIN
pxlfts3.0/A003.BIN
pxlfts3.0/A005.BIN
pxlfts3.0/A006.BIN
pxlfts3.0/T306.BIN
pxlfts3.0/T307.BIN
pxlfts3.0/T335.BIN
pxlfts3.0/T337.BIN
pxlfts3.0/T421.BIN
pxlfts3.0/T422.BIN

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@9985 a1074d23-0009-0410-80fe-cf8c14f379e6